--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Proyecto empresarial</h1>
+        <h2>Pruebas en GitHub</h2>
         <p>Párrafo agregado</p>
     </body>
 </html>
